--- a/gb/20/9/20/n12417126.md
+++ b/gb/20/9/20/n12417126.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ssdabc3483/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ssdabc3483/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ssdabc3483/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ssdabc3483/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ssdabc3483/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ssdabc3483/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ssdabc3483/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ssdabc3483/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ssdabc3483/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ssdabc3483/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ssdabc3483/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ssdabc3483/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ssdabc3483/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ssdabc3483/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ssdabc3483/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ssdabc3483/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ssdabc3483/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ssdabc3483/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ssdabc3483/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ssdabc3483/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ssdabc3483/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ssdabc3483/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ssdabc3483/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ssdabc3483/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>危老建筑将增至600万户 蔡英文：加快都更创造三赢</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2020年09月20日讯】（大纪元记者郑宜芬台湾台北报导）总统<ahref="https://github.com/ssdabc3483/djy/blob/master/gb/tag/%E8%94%A1%E8%8B%B1%E6%96%87.md#1">蔡英文</a>20日出席危老及<ahref="https://github.com/ssdabc3483/djy/blob/master/gb/tag/%E9%83%BD%E6%9B%B4.md#1">都更</a>博览会活动，她表示，目前全台30年以上的危老<ahref="https://github.com/ssdabc3483/djy/blob/master/gb/tag/%E5%BB%BA%E7%AD%91.md#1">建筑</a>超过400万户，未来会增加至600万户，必须要加快都更脚步，提出3原则“整合要容易、奖励要明确、审议要加速”，创造出民众、专业从业者、产业三赢的局面。</p>
-<p>蔡总统致词时表示，从她上任以来，解决不断攀升的危老<ahref="https://github.com/ssdabc3483/djy/blob/master/gb/tag/%E5%BB%BA%E7%AD%91.md#1">建筑</a>问题，让城市能够出现新的风貌，让民众有更好的生活空间，是她施政的重要课题。她说，过去4年已制定《都市危险及老旧建筑物加速重建条例》，透过专法来加速推动危老建物更新，也成立了专责机构“国家住宅及都市更新中心”，来增加政府行政执行的能量。去年修正通过的《都市更新条例》，以及金融联合都市更新服务公司的揭牌，正式开启<ahref="https://github.com/ssdabc3483/djy/blob/master/gb/tag/%E9%83%BD%E6%9B%B4.md#1">都更</a>2.0的里程碑。</p>
+<p>【大纪元2020年09月20日讯】（大纪元记者郑宜芬台湾台北报导）总统<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%94%A1%E8%8B%B1%E6%96%87.md#1">蔡英文</a>20日出席危老及<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%83%BD%E6%9B%B4.md#1">都更</a>博览会活动，她表示，目前全台30年以上的危老<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%BB%BA%E7%AD%91.md#1">建筑</a>超过400万户，未来会增加至600万户，必须要加快都更脚步，提出3原则“整合要容易、奖励要明确、审议要加速”，创造出民众、专业从业者、产业三赢的局面。</p>
+<p>蔡总统致词时表示，从她上任以来，解决不断攀升的危老<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%BB%BA%E7%AD%91.md#1">建筑</a>问题，让城市能够出现新的风貌，让民众有更好的生活空间，是她施政的重要课题。她说，过去4年已制定《都市危险及老旧建筑物加速重建条例》，透过专法来加速推动危老建物更新，也成立了专责机构“国家住宅及都市更新中心”，来增加政府行政执行的能量。去年修正通过的《都市更新条例》，以及金融联合都市更新服务公司的揭牌，正式开启<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%83%BD%E6%9B%B4.md#1">都更</a>2.0的里程碑。</p>
 <p>危老和都更案从过去平均每月40件逐年翻倍成长，今年1到8月已创下956件的好成绩，更创造出民众、专业从业者、产业界三赢的局面。第一赢是民众赢，让民众住的安全；第二赢是专业赢，让专业带动都市更新，创造了很多新的就业机会；第三赢是产业赢，建筑工程是庞大的产业链，从建材的选料、建设施工、消防设备的施作，到内部设计装修都缺一不可，为产业带来蓬勃发展，“可以说是新的火车头”。但她也强调，虽然危老都更案大幅成长，目前全台屋龄30年以上的户数超过400万户，未来更会增加至600万户，因此必须要加快脚步，“我的原则很清楚，整合要容易、奖励要明确、审议要加速”。</p>
 <p>蔡总统说，今年政府推出作业准则和招商手册，提供浅显易读的操作实务，也简化流程，尽量在一年内完成审议，让都更不再旷日费时。她提醒政府同仁务必全力加速，也拜托业者与政府共同努力，为国人打造更安全舒适的居住环境。</p>
 <p>责任编辑：玉珍</p>
@@ -15,47 +15,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/20/4/15/n12032526.md#1">东海戏院都更案 活化台中旧城区具指标性</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/20/8/28/n12364636.md#1">费城的房地产市场火热</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/20/9/10/n12393937.md#1">疫情下大型基建资金跌200亿 建筑就业堪忧</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/20/9/14/n12402393.md#1">澳中关系虽布阴影 中资仍在进军澳洲房地产</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/20/9/15/n12403595.md#1">中国投资者起诉房地产众筹公司“奇才”</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/20/9/16/n12407484.md#1">修复潭子农会谷仓 见证成熟产业建筑</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/20/9/17/n12409842.md#1">美次卿17日抵台 18日会蔡英文 19日悼李登辉</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/20/9/18/n12413769.md#1">传新任日相期待与蔡英文通话 48年来首次</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/20/9/18/n12413799.md#1">蔡英文宴请美次卿 盼开启台美关系新里程碑</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/20/9/18/n12413966.md#1">日前首相森喜朗负伤访台 蔡英文：让人动容</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/15/n12032526.md#1">东海戏院都更案 活化台中旧城区具指标性</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/28/n12364636.md#1">费城的房地产市场火热</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/9/10/n12393937.md#1">疫情下大型基建资金跌200亿 建筑就业堪忧</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/9/14/n12402393.md#1">澳中关系虽布阴影 中资仍在进军澳洲房地产</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/9/15/n12403595.md#1">中国投资者起诉房地产众筹公司“奇才”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/9/16/n12407484.md#1">修复潭子农会谷仓 见证成熟产业建筑</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/9/17/n12409842.md#1">美次卿17日抵台 18日会蔡英文 19日悼李登辉</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/9/18/n12413769.md#1">传新任日相期待与蔡英文通话 48年来首次</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/9/18/n12413799.md#1">蔡英文宴请美次卿 盼开启台美关系新里程碑</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/9/18/n12413966.md#1">日前首相森喜朗负伤访台 蔡英文：让人动容</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/19/n10862316.md#1" target="_blank">刘晓：祠堂被毁 不孝子孙愧对先祖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/16/n11726522.md#1" target="_blank">见证生命奇迹 感悟幸福荣耀</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/16/n11191240.md#1" target="_blank">林辉：诬陷美国发动细菌战 毛周被打脸</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/7/n11240051.md#1" target="_blank">纽约州奥伯尼市长宣布5月13日法轮大法日</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/14/n13576687.md#1">【百年真相】瞒天过海 中共炮制“美军细菌战”</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/21/n13594841.md#1">【未解之谜】梅辛传之四：权势抵不过天意</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/18/n13586699.md#1">【奇医】神医的再传弟子 看病有慧眼立奇功</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/28/n13611754.md#1">【新闻看点】李莹案更多细节曝光 习再遇难题？</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/28/n13612301.md#1">【远见快评】俄入侵闪电战失败 国际秩序重组</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/28/n13612020.md#1">【探索时分】乌反击俄利器：标枪反坦克导弹</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/25/n13605832.md#1">保持心脏健康 营养师推荐在Costco买六种食物</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/26/n13607072.md#1">【更新2.26】俄军遭遇后勤挑战与坚定抵抗</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/27/n13608596.md#1">徐州铁链女事件持续发酵 中国金融圈怒了</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/27/n13607917.md#1">家乡遭俄军攻击 瑞莎崩溃怒喊：究竟为了什么</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/27/n13607417.md#1">《维京传奇：英灵神殿》影评：复仇成功 只是挑战的开始</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/26/n13607115.md#1">【直播】疫情、疫苗 CDC没告诉你的2件事</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/26/n13606670.md#1">每个人在选择油漆颜色时都会犯的6个错误</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
-<li><a href="https://github.com/ssdabc3483/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/21/n13660848.md#1">【未解之谜】为何通灵者 看不透自己的未来？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674654.md#1">【十字路口】北京望俄战败？王毅拉拢印度踢铁板</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675431.md#1">【舞蹈三剑客】片尾彩蛋！三剑客公开纾压秘方</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674186.md#1">上海疫情大爆发 张文宏言论引炮轰</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13673923.md#1">挺俄反俄两派互搏 中共要全国学校紧跟党立场</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673050.md#1">俄乌战争后效应 外资大规模撤离大陆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672123.md#1">Selina直播中突离席 要“带男友进来”吓坏黄子佼</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673289.md#1">参加西藏之家音乐会 基努李维主演电影遭下架</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673381.md#1">“一代笑匠”许冠文获香港金像奖终身成就奖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674280.md#1">TAKAHIRO与武井咲次女出生：热闹中感受幸福</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/22/n13663634.md#1">姜是厨房常见药 能暖胃、去湿气 2情况不能吃</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669562.md#1">太晚吃东西真的会胖？营养饮食5个常见迷思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/14/n13645681.md#1">不吃油、米饭？让大脑开心的食物吃对就不怕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672739.md#1">【健康1+1】CDC：废水预测病毒升 下波高峰不是BA2？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ssdabc3483/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ssdabc3483/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/20/n12417126.htm">危老建筑将增至600万户 蔡英文：加快都更创造三赢</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/20/n12417126.htm">危老建筑将增至600万户 蔡英文：加快都更创造三赢</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ssdabc3483/djy/blob/master/gb/20/9/20/n12417126.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ssdabc3483/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ssdabc3483/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ssdabc3483/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ssdabc3483/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ssdabc3483/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/9/20/n12417126.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
